# SAGE-OS

./: .gitignore  BUILD.md  BUILD_README.md  CLA.md  CODE_OF_CONDUCT.md  COMMERCIAL_TERMS.md  COMPREHENSIVE_PROJECT_ANALYSIS_ORIGIN_BRANCH.md  CONTRIBUTING.md  DEEP_PROJECT_ANALYSIS.md  DEEP_PROJECT_ANALYSIS_FINAL.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  ENHANCEMENT_SUMMARY.md  FINAL_ANALYSIS_SUMMARY.md  LICENSE  MACOS_BUILD_GUIDE.md  MULTI_ARCH_BUILD_SUMMARY.md  Makefile  Makefile.multi-arch  ORIGIN_BRANCH_UPDATE_SUMMARY.md  PROJECT_ANALYSIS_REPORT.md  PR_CREATION_GUIDE.md  PUSH_TO_ORIGIN_INSTRUCTIONS.md  README.md  SECURITY.md  SUPPORTED_FILE_TYPES.txt  TESTING.md  USAGE_GUIDE.md  VERIFY_BUILD_SYSTEM.sh  add_license_headers.py  benchmark-builds.sh  build-all-architectures-macos.sh  build-all-architectures.sh  build-macos.sh  build.sh  config.txt  config_rpi5.txt  docker-build.sh  enhanced_license_headers.py  license-checker.py  (+7 more)
.github/docs/: README.md
.github/license-templates/: batch-style.txt  c-style.txt  cpp-style.txt  fortran-style.txt  hash-style.txt  haskell-style.txt  html-style.txt  latex-style.txt  lisp-style.txt  lua-style.txt  markdown-style.txt  pascal-style.txt  powershell-style.txt  sql-style.txt  text-style.txt  vim-style.txt
.github/workflows/: add-license-headers.yml  ai-drift-monitor.yml  build-kernel.yml  build-multi-arch.yml  build-test.yml  code-quality.yml  documentation-generation.yml  license-headers.yml  multi-arch-build.yml  nightly-self-evolve.yml  project-structure.yml  quantum-gpu-test.yml  sageos-ci.yml  security-license-audit.yml  test-license-headers.yml
CodeX Gigas/Codex Euricianus/: Code of Euric.txt
CodeX Gigas/The Lucifer Codex/: The Lucifer Codex.txt
Codex Gigas/: The Lucifer Codex.txt
Codex Gigas/Euricianus/: Code of Euric.txt
Theoretical Foundations of SAGE OS/: 01_self_evolving_os.md  02_ai_system_agent.md  03_ai_hardware_communication.md  04_software_energy_control.md  05_energy_to_mass_conversion.md  06_architectural_evolution.md  07_system_self_awareness.md  08_Model_Context_Protocol(MCP).md  09_AI-Driven_OS_or_Evolving_Hardware_Adaptation_and_Self-Updating_Capabilities.md  09_Evolving_Hardware_Adaptation_and_Self_Updating_Capabilities.md  10_Hybrid_Quantum_Classical_Supercomputing_Integration_for_Autonomous_OS.md  11_Framework_for_AI_Driven_Native_Speed_Cross_Platform_Binary_Compatibility.md  12_Absolute_Zero:Reinforced_Self-play_Reasoning_with_Zero_Data.md  Sage Os Theories.md  Theoretical Research.md
boot/: boot.S
build-output/: kernel-aarch64-rpi4.img  kernel-aarch64-rpi5.elf  kernel-arm-rpi4.elf  kernel-arm-rpi4.img  kernel-riscv64-generic.elf  kernel-riscv64-generic.img  kernel-x86_64-generic.elf  kernel-x86_64-generic.img
docs/: Aim of SAGE OS.md  BUILD_SYSTEM.md  Future Approaches.md  Gemfile  LICENSE_HEADER_TOOL.md  ROADMAP.md  Visionary Goal.md  _config.yml  contributing.md  index.md
docs/Research Paper/: root.txt
docs/_layouts/: default.html
docs/api/: index.md  kernel-core.md
docs/architecture/: index.md
docs/contributing/: index.md
docs/deployment/: index.md
docs/testing/: index.md
drivers/: i2c.c  i2c.h  spi.c  spi.h  uart.c  uart.h
drivers/ai_hat/: ai_hat.c  ai_hat.h
kernel/: kernel.c  kernel.h  memory.c  memory.h  shell.c  shell.h  stdio.c  stdio.h  types.h  utils.c  utils.h
kernel/ai/: ai_subsystem.c  ai_subsystem.h
minimal/: EXTENDING.md  README.md  boot.S  config.txt  config_rpi5.txt  kernel.c  linker.ld  uart.c  uart.h
prototype/: BUILD.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  config.txt  config_rpi5.txt  linker.ld  run_qemu.sh
prototype/ai/inference/: tflite_wrapper.cc  tflite_wrapper.h
prototype/boot/: boot.S
prototype/config/: config_rpi5.txt
prototype/kernel/core/: ai_subsystem.rs  init.c  lib.rs  main.rs  shell.rs
prototype/kernel/drivers/: ai_hat.c  ai_hat.h
prototype/kernel/drivers/rpi5/: gpio.c  timer.c  uart.c
prototype/kernel/hal/: mod.rs  rpi5.h
prototype/security/: crypto.c  crypto.h
prototype/tests/: CMakeLists.txt
scripts/: test_emulated.sh
test_files/: README.md  comprehensive_test.sh  config.yaml  sample.c  sample.js  sample.py
test_files/test_all_formats/: test.ada  test.bat  test.c  test.cpp  test.erl  test.f90  test.h  test.hs  test.html  test.js  test.lisp  test.lua  test.m  test.md  test.pas  test.ps1  test.py  test.sh  test.sql  test.tex  test.txt  test.vim  test.xml  test.yaml
tests/ai_tests/: test_ai_behavior.py
tests/update_tests/: test_update_protocol.py
